- Ingredient management - UI fixes

--- a/SiGotvime (Web)/Views/Recipe/GetRecipe.cshtml
+++ b/SiGotvime (Web)/Views/Recipe/GetRecipe.cshtml
@@ -79,7 +79,7 @@
     <meta property="og:image:height" content="@Height" />
     <meta property="og:title" content="@Model.Title" />
     <meta property="og:type" content="article" />
-    <meta property="og:description" content="Рецепт кој би го зготвил денес?" />
+    @*<meta property="og:description" content="Рецепт кој би го зготвил денес?" />*@
 }
 
 
@@ -182,11 +182,11 @@
                                         {
                                             if (selectedIngredients.Contains(item.Ingredient.ID))
                                             {
-                                                <img src="~/images/Status/678134-sign-check-128.png" data-toggle="tooltip" data-placement="left" title="Ја имате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
+                                                <img src="~/images/Status/678134-sign-check-128.png" data-toggle="tooltip" data-placement="left" title="Ја имате оваа состојка" style="width:20px;position:relative;left:-20px;margin-top:-45px;" />
                                             }
                                             else
                                             {
-                                                <img src="~/images/Status/678069-sign-error-128.png" data-toggle="tooltip" data-placement="left" title="Ја немате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
+                                                <img src="~/images/Status/678069-sign-error-128.png" data-toggle="tooltip" data-placement="left" title="Ја немате оваа состојка" style="width:20px;position:relative;left:-20px;margin-top:-45px;" />
                                             }
                                         }
                                     </dt>
@@ -199,11 +199,11 @@
                                         {
                                             if (selectedIngredients.Contains(item.Ingredient.ID))
                                             {
-                                                <img src="~/images/Status/678134-sign-check-128.png" data-toggle="tooltip" data-placement="left" title="Ја имате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
+                                                <img src="~/images/Status/678134-sign-check-128.png" data-toggle="tooltip" data-placement="left" title="Ја имате оваа состојка" style="width:20px;position:relative;left:-20px;margin-top:-45px;" />
                                             }
                                             else
                                             {
-                                                <img src="~/images/Status/678069-sign-error-128.png" data-toggle="tooltip" data-placement="left" title="Ја немате оваа состојка" style="width:20px;position:absolute;left:4px;margin-top:-45px;" />
+                                                <img src="~/images/Status/678069-sign-error-128.png" data-toggle="tooltip" data-placement="left" title="Ја немате оваа состојка" style="width:20px;position:relative;left:-20px;margin-top:-45px;" />
                                             }
                                         }
                                     </dt>
