--- a/SiGotvime (Web)/Views/Home/Advertisments.cshtml
+++ b/SiGotvime (Web)/Views/Home/Advertisments.cshtml
@@ -1,39 +1,5 @@
-﻿<div class="widget wow fadeInRight" data-wow-delay=".6s">
-    @*<div id="flashContent">
-        <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="270" height="250" id="Pakomak 300x250" align="middle">
-            <param name="movie" value="~/Content/banners/Pakomak 300x250.swf" />
-            <param name="quality" value="high" />
-            <param name="bgcolor" value="#ffffff" />
-            <param name="play" value="true" />
-            <param name="loop" value="true" />
-            <param name="wmode" value="window" />
-            <param name="scale" value="showall" />
-            <param name="menu" value="true" />
-            <param name="devicefont" value="false" />
-            <param name="salign" value="" />
-            <param name="allowScriptAccess" value="sameDomain" />
-            <!--[if !IE]>-->
-            <object type="application/x-shockwave-flash" data="~/Content/banners/Pakomak 300x250.swf" width="300" height="250">
-                <param name="movie" value="Pakomak 300x250.swf" />
-                <param name="quality" value="high" />
-                <param name="bgcolor" value="#ffffff" />
-                <param name="play" value="true" />
-                <param name="loop" value="true" />
-                <param name="wmode" value="window" />
-                <param name="scale" value="showall" />
-                <param name="menu" value="true" />
-                <param name="devicefont" value="false" />
-                <param name="salign" value="" />
-                <param name="allowScriptAccess" value="sameDomain" />
-                <!--<![endif]-->
-                <a href="http://www.adobe.com/go/getflash">
-                    <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
-                </a>
-                <!--[if !IE]>-->
-            </object>
-            <!--<![endif]-->
-        </object>
-    </div>*@
+﻿<div class="widget wow fadeInRight" data-wow-delay=".6s" ng-non-bindable>
+ 
     <iframe src="~/Content/banners/Pakomak/Pakomak 300x250.html" height="220">
-    </iframe>
+    </iframe>    
 </div>
