- new Ekon Elektron banner

--- a/SiGotvime (Web)/Views/Home/Advertisments.cshtml
+++ b/SiGotvime (Web)/Views/Home/Advertisments.cshtml
@@ -1,5 +1,10 @@
-﻿<div class="widget wow fadeInRight" data-wow-delay=".6s" ng-non-bindable>
- 
-    <iframe src="~/Content/banners/Pakomak/Pakomak 300x250.html" height="220">
-    </iframe>    
+﻿<div class="widget wow fadeInRight" data-wow-delay=".6s" ng-non-bindable style="background-color:transparent;cursor:pointer;">
+    <iframe src="~/Content/banners/3EkonElektorn(soLink)/ekonElektorn.html" height="225" style="overflow-y:hidden"></iframe>
 </div>
+<div class="widget wow fadeInRight" data-wow-delay=".6s" ng-non-bindable style="background-color:transparent">
+    <iframe src="~/Content/banners/Pakomak/Pakomak 300x250.html" height="220"></iframe>
+</div>
+
+
+
+
