--- a/SiGotvime (Web)/Views/Shared/_Layout.cshtml
+++ b/SiGotvime (Web)/Views/Shared/_Layout.cshtml
@@ -64,6 +64,7 @@
                                 <li><a href="@Url.Action("UnApprovedRecipes","Admin")" title="Неодобрени рецепти">Неодобрени Рецепти</a></li>
                                 <li><a href="@Url.Action("RegisteredUsers","Admin")" title="Регистрирани корисници">Корисници</a></li>
                                 <li><a href="@Url.Action("Index","Ingredient")" title="Регистрирани корисници">Состојки</a></li>
+                                <li><a href="@Url.Action("RecipeOfTheDay","Recipe")" title="Регистрирани корисници">Рецепт на денот</a></li>
                             </ul>
                         </li>
                     }
